--- a/README
+++ b/README
@@ -1,12 +1,11 @@
 = Carousel
 
-A rotating banner for Radiant extensions. Based on "Infinite Carousel" by CatchMyFame.com and includes JQuery (http://www.catchmyfame.com/catchmyfame-jquery-plugins/). Version 1.2.2 of Infinite Carousel. (not latest, by the way).
-By Anna Billstrom for Blazing Cloud (http://www.blazingcloud.net)
-
+A rotating banner for Radiant extensions. Based on "Infinite Carousel" by CatchMyFame.com and includes JQuery 1.4.2. Version 2.0 of Infinite Carousel.
+By Blazing Cloud, Inc (http://www.blazingcloud.net)
 
 To Install
 1. In your vendor/extensions directory, enter:
-git clone git@github.com:banane/radiant-carousel-extension.git carousel
+git clone git@github.com:blazingcloud/radiant-carousel-extension.git
 
 2. OPTIONAL: You can copy images to a radiant public image directory by typing, in your Radiant root:
 rake radiant:extensions:carousel:copy_images
@@ -23,7 +22,19 @@ rake radiant:extensions:carousel:update
 </r:carousel>
 
 5. Lastly, make sure the pages that carry the carousel have a layout, that includes the following links in the header (in this order):
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script type="text/javascript" src="/javascript/jquery.infinitecarousel.js"></script>
-<script type="text/javascript" src="/javascript/carousel.js"></script>
-<LINK REL=StyleSheet HREF="/stylesheet/carousel.css" TYPE="text/css" MEDIA=screen> 
+<script type="text/javascript" src="javascript/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="javascript/jquery.infinitecarousel2.js"></script>
+
+<script type="text/javascript">
+    $(function(){
+        $('#carousel').infiniteCarousel({
+            /****   Override defaults here  ****
+             * transitionSpeed : 250,//how fast the slides move
+             * displayTime : 6000, //how long before the slides move
+             * autoStart: false, //set to true if you want the carousel to start by default
+             * textholderHeight : .2,
+             * ... more options available for override, check out jquery.infinitecarousel.js
+             */
+        });
+    });
+</script>
